Added header website name added nav links and main image and site goals

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -12,6 +12,32 @@
 
 <body>
 
+    <section id="home-section">
+        <div class="container_12 clearfix">
+            <div id="header" class="grid_12">
+                <h1>Cryptocurrency History</h1>
+                <ul id="nav">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">PAHS A.I</a></li>
+                    <li><a href="">History</a></li>
+                    <li><a href="">Sign Up</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <div id="hero-image">
+            <img src="pexels-merlin-lightpainting-14314637.jpg" alt="Hero Image" />
+        </div>
+        <div id="ai-info">
+            <h1>PAHS A.I.</h1>
+            <p>Merging history with modern technology is our passion and mission.
+                We believe that by harnessing the power of advanced technologies such as artificial intelligence,
+                predictive
+                analytics, and interactive user experiences, we can bring the rich and fascinating history of
+                cryptocurrencies to life like never before.</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
