Added welcome message and discription of platform

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -38,6 +38,13 @@
         </div>
     </section>
 
+    <h1>Welcome to our AI-Powered History Website!</h1>
+    <p>
+        We are currently developing an innovative history platform that utilizes
+        artificial intelligence and predictive analytics to provide users with a
+        comprehensive historical experience.
+    </p>
+
 </body>
 
 </html>
