Added features of platform and developments

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -45,6 +45,48 @@
         comprehensive historical experience.
     </p>
 
+    <div class="blockchain">
+        <h2>Key Features:</h2>
+        <ul>
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fab fa-connectdevelop"></i>
+                    </div>
+                </div>
+                Integration with multiple online resources
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-code-branch"></i>
+                    </div>
+                </div>
+                Predictive analytics for personalized recommendations
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-database"></i>
+                    </div>
+                </div>
+                Continuous database updates based on user interactions
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                </div>
+                Development of a mobile app focused on cryptocurrency history
+            </li>
+        </ul>
+        <br />
+    </div>
+
 </body>
 
 </html>
