--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -87,6 +87,38 @@
         <br />
     </div>
 
+    <section id="aichatbot">
+        <h1 id="pahsa.i-section">Predictive Analytics Historical System</h1>
+        <h1>PAHS A.I</h1>
+        <br>
+        <div class="circle">
+            <div class="icon">
+                <i class="fas fa-robot"></i>
+            </div>
+        </div>
+        <br>
+        <section class="change">
+            <div>
+                <h1>
+                    Our chatbot offers integration with online resources for up-to-date cryptocurrency information. It
+                    uses
+                    predictive analytics for personalized recommendations. The chatbot continuously learns from user
+                    interactions and updates its knowledge. Our team is developing a mobile app focused on
+                    cryptocurrency
+                    history, integrating the chatbot for convenient access to real-time information.
+                    <br>
+                    <div id="chatbox">
+                        <input type="text" id="user-input" placeholder="Ask a question..." />
+                        <button id="send-btn">Send</button>
+                        <p class="development-indicator">
+                            This chatbot is still under development.
+                        </p>
+                </h1>
+            </div>
+            </div>
+        </section>
+    </section>
+
 </body>
 
 </html>
