Added additional features of website and current developments

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -119,6 +119,47 @@
         </section>
     </section>
 
+    <div class="blockchain">
+        <h2>Additional features:</h2>
+        <ul>
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-language"></i>
+                    </div>
+                </div>
+                Natural Language Processing (NLP) for content analysis
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-vr-cardboard"></i>
+                    </div>
+                </div>
+                Augmented Reality (AR) for immersive historical experiences
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-gamepad"></i>
+                    </div>
+                </div>
+                Gamification elements for engaging learning experiences
+            </li>
+
+            <li>
+                <div class="circle">
+                    <div class="icon">
+                        <i class="fas fa-users"></i>
+                    </div>
+                </div>
+                Social community and collaboration features
+            </li>
+        </ul>
+    </div>
+
 </body>
 
 </html>
