--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -160,6 +160,20 @@
         </ul>
     </div>
 
+    <section class="contact" id="contact-section">
+        <div id="contact-information">
+            <h2 id="contact-section">Get Involved:</h2>
+            <p class="contact-text">
+                We value your feedback and contributions. If you would like to be part
+                of our journey or have any suggestions, please reach out to us through
+                the provided contact information.
+            </p>
+            <h3>Contact Us:</h3>
+            <p>Email: info@yourwebsite.com</p>
+            <p>Phone: +1 123-456-7890</p>
+        </div>
+    </section>
+
 </body>
 
 </html>
