--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -174,6 +174,38 @@
         </div>
     </section>
 
+    <div class="footer">
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fab fa-facebook" style="color: whitesmoke"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fab fa-twitter-square" style="color: whitesmoke"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fab fa-youtube-square" style="color: whitesmoke"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fab fa-instagram" style="color: whitesmoke"></i>
+                </a>
+            </li>
+        </ul>
+        <section>
+            <footer>&copy; Cryptocurrency History 2023</footer>
+        </section>
+    </div>
+
 </body>
 
 </html>
