--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -206,6 +206,8 @@
         </section>
     </div>
 
+    <script src="https://kit.fontawesome.com/6b544c66a0.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
