--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Cryptocurrency History website for the wolrd" />
     <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
     <title>Cryptocurrency History</title>
+    <link rel="stylesheet" href="cryptocurrency-history-stylesheet.css" />
 </head>
 
 <body>
