Added in a href links for home and history page

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -18,9 +18,9 @@
             <div id="header" class="grid_12">
                 <h1>Cryptocurrency History</h1>
                 <ul id="nav">
-                    <li><a href="">Home</a></li>
+                    <li><a href="cryptocurrency-history.html">Home</a></li>
                     <li><a href="">PAHS A.I</a></li>
-                    <li><a href="">History</a></li>
+                    <li><a href="cryptocurrency-history-timeline.html">History</a></li>
                     <li><a href="">Sign Up</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
