--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -19,10 +19,10 @@
                 <h1>Cryptocurrency History</h1>
                 <ul id="nav">
                     <li><a href="cryptocurrency-history.html">Home</a></li>
-                    <li><a href="">PAHS A.I</a></li>
+                    <li><a href="#pahsa.i-section">PAHS A.I</a></li>
                     <li><a href="cryptocurrency-history-timeline.html">History</a></li>
-                    <li><a href="">Sign Up</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="cryptocurrency-history-signup.html">Sign Up</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </div>
         </div>
