Added href links for timeline page

--- a/cryptocurrency-history-timeline.html
+++ b/cryptocurrency-history-timeline.html
@@ -16,14 +16,10 @@
             <div id="header" class="grid_12">
                 <h1>Cryptocurrency History</h1>
                 <ul id="nav">
-                    <li><a href="cryptocurrency-history">Home</a></li>
+                    <li><a href="cryptocurrency-history.html">Home</a></li>
                     <li><a href="#pahsa.i-section">PAHS A.I</a></li>
-                    <li>
-                        <a href="">History</a>
-                    </li>
-                    <li>
-                        <a href="">Sign Up</a>
-                    </li>
+                    <li><a href="cryptocurrency-history-timeline.html">History</a></li>
+                    <li><a href="cryptocurrency-history-signup.html">Sign Up</a></li>
                     <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </div>
