Removed trailing slash from meta tags and chnaged welcome heading to h2 instead of h1

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cryptocurrency History website for the wolrd" />
-    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
+    <meta name="description" content="Cryptocurrency History website for the wolrd">
+    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem">
     <title>Cryptocurrency History</title>
-    <link rel="stylesheet" href="styles/cryptocurrency-history-stylesheet.css" />
+    <link rel="stylesheet" href="styles/cryptocurrency-history-stylesheet.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
         </div>
     </section>
 
-    <h1>Welcome to our AI-Powered History Website!</h1>
+    <h2>Welcome to our AI-Powered History Website!</h2>
     <p>
         We are currently developing an innovative history platform that utilizes
         artificial intelligence and predictive analytics to provide users with a
