--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -161,7 +161,7 @@
 
     <section class="contact" id="contact-section">
         <div id="contact-information">
-            <h2 id="contact-section">Get Involved:</h2>
+            <h2>Get Involved:</h2>
             <p class="contact-text">
                 We value your feedback and contributions. If you would like to be part
                 of our journey or have any suggestions, please reach out to us through
