Added appropriate heading element

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -167,9 +167,11 @@
                 of our journey or have any suggestions, please reach out to us through
                 the provided contact information.
             </p>
-            <h3>Contact Us:</h3>
-            <p>Email: info@yourwebsite.com</p>
-            <p>Phone: +1 123-456-7890</p>
+            <div class="contact-section">
+                <h2>Contact Us:</h2>
+                <p>Email: info@yourwebsite.com</p>
+                <p>Phone: +1 123-456-7890</p>
+            </div>
         </div>
     </section>
 
