Removed div element as it can't be a child of the h1 element also removed / from input closing tag

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div id="hero-image">
-            <img src="styles/pexels-merlin-lightpainting-14314637.jpg" alt="Hero Image" />
+            <img src="styles/pexels-merlin-lightpainting-14314637.jpg" alt="Hero Image">
         </div>
         <div id="ai-info">
             <h1>PAHS A.I.</h1>
@@ -85,7 +85,7 @@
                 Development of a mobile app focused on cryptocurrency history
             </li>
         </ul>
-        <br />
+        <br>
     </div>
 
     <section id="aichatbot">
@@ -100,19 +100,17 @@
         <br>
         <section class="change">
             <h1>
-                Our chatbot offers integration with online resources for up-to-date cryptocurrency information. It
-                uses
-                predictive analytics for personalized recommendations. The chatbot continuously learns from user
-                interactions and updates its knowledge. Our team is developing a mobile app focused on
-                cryptocurrency
-                history, integrating the chatbot for convenient access to real-time information.
+                Our chatbot offers integration with online resources for up-to-date cryptocurrency information. It uses
+                predictive
+                analytics for personalized recommendations. The chatbot continuously learns from user interactions and
+                updates its
+                knowledge. Our team is developing a mobile app focused on cryptocurrency history, integrating the
+                chatbot for
+                convenient access to real-time information.
                 <br>
-                <div id="chatbox">
-                    <input type="text" id="user-input" placeholder="Ask a question..." />
-                    <button id="send-btn">Send</button>
-                    <p class="development-indicator">
-                        This chatbot is still under development.
-                    </p>
+                <input type="text" id="user-input" placeholder="Ask a question...">
+                <button id="send-btn">Send</button>
+                <p class="development-indicator">This chatbot is still under development.</p>
             </h1>
             </div>
         </section>
