Added heading element for footer

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -98,23 +98,19 @@
             </div>
         </div>
         <br>
-        <section class="change">
+        <div class="change">
             <h1>
                 Our chatbot offers integration with online resources for up-to-date cryptocurrency information. It uses
-                predictive
-                analytics for personalized recommendations. The chatbot continuously learns from user interactions and
-                updates its
-                knowledge. Our team is developing a mobile app focused on cryptocurrency history, integrating the
-                chatbot for
-                convenient access to real-time information.
-                <br>
-                <input type="text" id="user-input" placeholder="Ask a question...">
-                <button id="send-btn">Send</button>
-                <p class="development-indicator">This chatbot is still under development.</p>
-            </h1>
-            </div>
-        </section>
+                predictive analytics for personalized recommendations. The chatbot continuously learns from user
+                interactions and updates its knowledge. Our team is developing a mobile app focused on cryptocurrency
+                history, integrating the chatbot for convenient access to real-time information.</h1>
+            <br>
+            <input type="text" id="user-input" placeholder="Ask a question...">
+            <button id="send-btn">Send</button>
+            <p class="development-indicator">This chatbot is still under development.</p>
+        </div>
     </section>
+
 
     <div class="blockchain">
         <h2>Additional features:</h2>
@@ -172,6 +168,7 @@
             </div>
         </div>
     </section>
+
 
     <div class="footer">
         <ul class="social-networks">
