Fixed bugs from validating

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -169,7 +169,6 @@
         </div>
     </section>
 
-
     <div class="footer">
         <ul class="social-networks">
             <li>
@@ -198,8 +197,10 @@
             </li>
         </ul>
         <section>
+            <h2>Footer</h2>
             <footer>&copy; Cryptocurrency History 2023</footer>
         </section>
+
     </div>
 
     <script src="https://kit.fontawesome.com/6b544c66a0.js" crossorigin="anonymous"></script>
