Replaced the closing tag of change div to place the chat window inside it

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -103,10 +103,11 @@
                 Our chatbot offers integration with online resources for up-to-date cryptocurrency information. It uses
                 predictive analytics for personalized recommendations. The chatbot continuously learns from user
                 interactions and updates its knowledge. Our team is developing a mobile app focused on cryptocurrency
-                history, integrating the chatbot for convenient access to real-time information.</h1>
-            <input type="text" id="user-input" placeholder="Ask a question...">
-            <button id="send-btn">Send</button>
-            <p class="development-indicator">This chatbot is still under development.</p>
+                history, integrating the chatbot for convenient access to real-time information.
+                <input type="text" id="user-input" placeholder="Ask a question...">
+                <button id="send-btn">Send</button>
+                <p class="development-indicator">This chatbot is still under development.</p>
+            </h1>
         </div>
     </section>
 
@@ -196,7 +197,7 @@
             </li>
         </ul>
         <section>
-            <h2>Footer</h2>
+            <h2>Our journey begins here</h2>
             <footer>&copy; Cryptocurrency History 2023</footer>
         </section>
 
