Added new name for additional features div to style is correctly

--- a/cryptocurrency-history.html
+++ b/cryptocurrency-history.html
@@ -86,7 +86,7 @@
         <br>
     </div>
 
-    <div class="blockchain">
+    <div class="blockchain2">
         <h2>Additional features:</h2>
         <ul>
             <li>
