Fixed href links on history, signup html and corrected css link on both

--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cryptocurrency History website for the wolrd" />
     <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
     <title>Cryptocurrency History</title>
-    <link rel="stylesheet" href="styles/cryptocurrency-history-stylesheet.css" />
+    <link rel="stylesheet" href="styles/stylesheet.css" />
 </head>
 
 <body>
@@ -16,9 +16,9 @@
             <div id="header" class="grid_12">
                 <h1>Cryptocurrency History</h1>
                 <ul id="nav">
-                    <li><a href="cryptocurrency-history.html">Home</a></li>
-                    <li><a href="cryptocurrency-history-timeline.html">History</a></li>
-                    <li><a href="cryptocurrency-history-signup.html">Sign Up</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="history.html">History</a></li>
+                    <li><a href="signup.html">Sign Up</a></li>
                 </ul>
             </div>
         </div>
