--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
         </div>
-        <div id="hero-image">
+        <div id="hero-image-signup">
             <img src="styles/pexels-merlin-lightpainting-crypto signup page.jpg" alt="Hero Image" />
         </div>
     </section>
