--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
             </p>
             <div class="contact-section">
                 <h2>Contact Us:</h2>
-                <p>Email: info@yourwebsite.com</p>
-                <p>Phone: +1 123-456-7890</p>
+                <p>Email: <a href="mailto:info@yourwebsite.com" class="contact-link">info@yourwebsite.com</a></p>
+                <p>Phone: <a href="tel:+11234567890" class="contact-link">+1 123-456-7890</a></p>
             </div>
         </div>
     </section>
