--- a/signup.html
+++ b/signup.html
@@ -26,20 +26,18 @@
                 </ul>
             </div>
         </div>
-        <div id="hero-image-signup">
-            <img src="styles/pexels-merlin-lightpainting-crypto signup page.jpg" alt="Hero Image" />
-        </div>
     </section>
 
-    <section id="contact-section" id="signup-section">
+    <section id="contact-section">
         <div id="custom-contact">
+            <i class="fas fa-info-circle"></i>
             <h2 id="contact-section">Sign Up:</h2>
             <p class="contact-text">
                 We value your feedback and contributions. If you would like to be part
                 of our journey or have any suggestions, please sign up using the form
                 below.
             </p>
-            <form action="/signup" method="POST">
+            <form id="signup-section" action="/signup" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required />
 
@@ -81,7 +79,7 @@
                 </a>
             </li>
         </ul>
-        <section>
+        <section class="signup-page-footer">
             <footer>&copy; Cryptocurrency History 2023</footer>
         </section>
     </div>
