--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Cryptocurrency History website for the wolrd" />
     <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
     <title>Cryptocurrency History</title>
-    <link rel="stylesheet" href="styles/stylesheet.css" />
+    <link rel="stylesheet" href="assets/styles/stylesheet.css" />
 </head>
 
 <body>
