Fixed file paths for images in css and index.html

--- a/index.html
+++ b/index.html
@@ -127,13 +127,14 @@
         </ul>
     </div>
 
-    <section class="contact" id="contact-section">
+    <section class="contact" id="contact-section"
+        style="background-image: url('assets/styles/ivana-cajina-asuyh-_ZX54-unsplash.webp');">
         <div id="contact-information">
             <h2>Get Involved:</h2>
             <p class="contact-text">
-                We value your feedback and contributions. If you would like to be part
-                of our journey or have any suggestions, please reach out to us through
-                the provided contact information.
+                We value your feedback and contributions. If you would like to be part of our journey or have any
+                suggestions,
+                please reach out to us through the provided contact information.
             </p>
             <div class="contact-section">
                 <h2>Contact Us:</h2>
@@ -142,6 +143,7 @@
             </div>
         </div>
     </section>
+
 
     <div class="footer">
         <ul class="social-networks">
