Delated jpg files of images and correctly named new image files and fixed source paths

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="hero-image">
-            <img src="assets/pexels-merlin-lightpainting-14314637.webp" alt="Hero Image">
+            <img src="assets/index hero image.webp" alt="Hero Image">
         </div>
         <div id="ai-info">
             <h1>PAHS A.I.</h1>
@@ -128,7 +128,7 @@
     </div>
 
     <section class="contact" id="contact-section"
-        style="background-image: url('assets/styles/ivana-cajina-asuyh-_ZX54-unsplash.webp');">
+        style="background-image: url('assets/contact information image.webp');">
         <div id="contact-information">
             <h2>Get Involved:</h2>
             <p class="contact-text">
