--- a/history.html
+++ b/history.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div id="hero-image">
-            <img src="assets/styles/history hero image.jpg" alt="Hero Image" />
+            <img src="assets/history hero image.jpg" alt="Hero Image" />
         </div>
     </section>
 
