Fixed media queries and added more for screen size 1600px, Also changed ul to div for the timeline for better responiveness

--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
     <h1 id="timeline-section">
         Cryptocurrency History Timeline <i class="far fa-calendar-alt"></i>
     </h1>
-    <ul class="timeline">
+    <div class="timeline">
         <li class="timeline-item">
             <div class="timeline-date">Pre-Bitcoin Era</div>
             <div class="timeline-content">
@@ -145,7 +145,7 @@
                 </p>
             </div>
         </li>
-    </ul>
+    </div>
 
     <div class="quiz-section">
         <h2>Quiz <i class="fal fa-question-circle"></i></h2>
