Removed space from file path to pass validation on index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div id="hero-image">
-            <img src="assets/images/index hero image.webp" alt="Hero Image">
+            <img src="assets/images/index-hero-image.webp" alt="Hero Image">
         </div>
         <div id="ai-info">
             <h1>PAHS A.I.</h1>
