--- a/history.html
+++ b/history.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cryptocurrency History website for the wolrd" />
-    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cryptocurrency History website for the wolrd">
+    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem">
     <title>Cryptocurrency History</title>
-    <link rel="stylesheet" href="assets/styles/stylesheet.css" />
+    <link rel="stylesheet" href="assets/styles/stylesheet.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div id="hero-image">
-            <img src="assets/images/history-hero-image.jpg" alt="Hero Image" />
+            <img src="assets/images/history-hero-image.jpg" alt="Hero Image">
         </div>
     </section>
 
