--- a/history.html
+++ b/history.html
@@ -14,7 +14,7 @@
     <section id="home-section">
         <div class="container_12 clearfix">
             <div id="header" class="grid_12">
-                <h1>Cryptocurrency History</h1>
+                <h2>Cryptocurrency History</h2>
                 <ul id="nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="history.html">History</a></li>
@@ -192,9 +192,9 @@
                 </a>
             </li>
         </ul>
-        <section>
+        <div>
             <footer>&copy; Cryptocurrency History 2023</footer>
-        </section>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/6b544c66a0.js" crossorigin="anonymous"></script>
