--- a/signup.html
+++ b/signup.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cryptocurrency History website for the wolrd" />
-    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cryptocurrency History website for the wolrd">
+    <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem">
     <title>Cryptocurrency History</title>
-    <link rel="stylesheet" href="assets/styles/stylesheet.css" />
+    <link rel="stylesheet" href="assets/styles/stylesheet.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     <section id="contact-section">
         <div id="custom-contact">
             <i class="fas fa-info-circle"></i>
-            <h2 id="contact-section">Sign Up:</h2>
+            <h2>Sign Up:</h2>
             <p class="contact-text">
                 We value your feedback and contributions. If you would like to be part
                 of our journey or have any suggestions, please sign up using the form
@@ -39,15 +39,15 @@
             </p>
             <form id="signup-section" action="/signup" method="POST">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required />
+                <input type="text" id="name" name="name" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required />
+                <input type="email" id="email" name="email" required>
 
                 <label for="phone">Phone:</label>
-                <input type="tel" id="phone" name="phone" required />
+                <input type="tel" id="phone" name="phone" required>
 
-                <input type="submit" value="Sign Up" id="signup-btn" />
+                <input type="submit" value="Sign Up" id="signup-btn">
             </form>
         </div>
     </section>
@@ -79,9 +79,9 @@
                 </a>
             </li>
         </ul>
-        <section class="signup-page-footer">
+        <div class="signup-page-footer">
             <footer>&copy; Cryptocurrency History 2023</footer>
-        </section>
+        </div>
     </div>
 
     <script src="https://kit.fontawesome.com/6b544c66a0.js" crossorigin="anonymous"></script>
