--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cryptocurrency History website for the wolrd">
+    <meta name="description" content="Cryptocurrency History website for the world">
     <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem">
     <title>Cryptocurrency History</title>
     <link rel="stylesheet" href="assets/styles/stylesheet.css">
