--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cryptocurrency History website for the wolrd">
+    <meta name="description" content="Cryptocurrency History website for the world">
     <meta name="keywords" content="Cryptocurrency finance blockchain technology defi bitcoin etheruem">
     <title>Cryptocurrency History</title>
     <link rel="stylesheet" href="assets/styles/stylesheet.css">
