Removed text shadow from h1 element and changed color of i element for history page for better contrast

--- a/history.html
+++ b/history.html
@@ -28,7 +28,7 @@
     </section>
 
     <h1 id="timeline-section">
-        Cryptocurrency History Timeline <i class="far fa-calendar-alt"></i>
+        Cryptocurrency History Timeline <i class="far fa-calendar-alt" style="color: whitesmoke"></i>
     </h1>
     <ul class="timeline">
         <li class="timeline-item">
