Removed redundent css code to make elements respond better, removed inline css from index page, removed contact information image

--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
         </ul>
     </div>
 
-    <section class="contact" id="contact-section"
-        style="background-image: url('assets/images/contact information image.webp');">
+    <section class="contact" id="contact-section">
         <div id="contact-information">
             <h2>Get Involved:</h2>
             <p class="contact-text">
@@ -150,25 +149,25 @@
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fab fa-facebook" style="color: whitesmoke"></i>
+                    <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="https://twitter.com" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fab fa-twitter-square" style="color: whitesmoke"></i>
+                    <i class="fab fa-twitter-square"></i>
                 </a>
             </li>
             <li>
                 <a href="https://youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our YouTube page (opens in a new tab)">
-                    <i class="fab fa-youtube-square" style="color: whitesmoke"></i>
+                    <i class="fab fa-youtube-square"></i>
                 </a>
             </li>
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fab fa-instagram" style="color: whitesmoke"></i>
+                    <i class="fab fa-instagram"></i>
                 </a>
             </li>
         </ul>
