changed Ul to a div to respond better in all screen sizes

--- a/index.html
+++ b/index.html
@@ -46,86 +46,83 @@
 
     <div class="blockchain">
         <h2>Key Features:</h2>
-        <ul>
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fab fa-connectdevelop"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fab fa-connectdevelop"></i>
                 </div>
-                Integration with multiple online resources
-            </li>
+            </div>
+            Integration with multiple online resources
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-code-branch"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-code-branch"></i>
                 </div>
-                Predictive analytics for personalized recommendations
-            </li>
+            </div>
+            Predictive analytics for personalized recommendations
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-database"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-database"></i>
                 </div>
-                Continuous database updates based on user interactions
-            </li>
+            </div>
+            Continuous database updates based on user interactions
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-mobile-alt"></i>
                 </div>
-                Development of a mobile app focused on cryptocurrency history
-            </li>
-        </ul>
-        <br>
+            </div>
+            Development of a mobile app focused on cryptocurrency history
+        </div>
     </div>
+
 
     <div class="blockchain2">
         <h2>Additional features:</h2>
-        <ul>
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-language"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-language"></i>
                 </div>
-                Natural Language Processing (NLP) for content analysis
-            </li>
+            </div>
+            Natural Language Processing (NLP) for content analysis
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-vr-cardboard"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-vr-cardboard"></i>
                 </div>
-                Augmented Reality (AR) for immersive historical experiences
-            </li>
+            </div>
+            Augmented Reality (AR) for immersive historical experiences
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-gamepad"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-gamepad"></i>
                 </div>
-                Gamification elements for engaging learning experiences
-            </li>
+            </div>
+            Gamification elements for engaging learning experiences
+        </div>
 
-            <li>
-                <div class="circle">
-                    <div class="icon">
-                        <i class="fas fa-users"></i>
-                    </div>
+        <div class="feature">
+            <div class="circle">
+                <div class="icon">
+                    <i class="fas fa-users"></i>
                 </div>
-                Social community and collaboration features
-            </li>
-        </ul>
+            </div>
+            Social community and collaboration features
+        </div>
     </div>
+
 
     <section class="contact" id="contact-section">
         <div id="contact-information">
