Adjusted all media queries and removed style rules effecting responsiveness upon recomendations

--- a/history.html
+++ b/history.html
@@ -28,11 +28,13 @@
     </section>
 
     <h1 id="timeline-section">
-        Cryptocurrency History Timeline <i class="far fa-calendar-alt" style="color: whitesmoke"></i>
+        Cryptocurrency History Timeline <i class="far fa-calendar-alt"></i>
     </h1>
-    <ul class="timeline">
-        <li class="timeline-item">
-            <div class="timeline-date">Pre-Bitcoin Era</div>
+    <div class="timeline">
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Pre-Bitcoin Era</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     In the 1980s, David Chaum introduced the concept of cryptographic
@@ -45,10 +47,12 @@
                     failed.
                 </p>
             </div>
-        </li>
+        </div>
 
-        <li class="timeline-item">
-            <div class="timeline-date">Bitcoin Emerges</div>
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Bitcoin Emerges</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     In 2008, an individual or group using the pseudonym Satoshi Nakamoto
@@ -65,10 +69,12 @@
                     without the need for a centralized authority.
                 </p>
             </div>
-        </li>
+        </div>
 
-        <li class="timeline-item">
-            <div class="timeline-date">Early Development and Expansion</div>
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Early Development and Expansion</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     In the early years, Bitcoin gained attention from cypherpunks,
@@ -84,10 +90,12 @@
                     alternative cryptocurrencies, often referred to as altcoins.
                 </p>
             </div>
-        </li>
+        </div>
 
-        <li class="timeline-item">
-            <div class="timeline-date">Altcoin Boom and ICOs</div>
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Altcoin Boom and ICOs</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     In 2011, Namecoin, a decentralized domain name registration system,
@@ -102,10 +110,12 @@
                     popularity as a fundraising method for cryptocurrency projects.
                 </p>
             </div>
-        </li>
+        </div>
 
-        <li class="timeline-item">
-            <div class="timeline-date">Mainstream Adoption and Challenges</div>
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Mainstream Adoption and Challenges</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     Bitcoin gained wider recognition as more businesses started
@@ -122,10 +132,12 @@
                     consumption of Bitcoin mining.
                 </p>
             </div>
-        </li>
+        </div>
 
-        <li class="timeline-item">
-            <div class="timeline-date">Cryptocurrency Market Maturity</div>
+        <div class="timeline-item">
+            <div class="timeline-date">
+                <h2>Cryptocurrency Market Maturity</h2>
+            </div>
             <div class="timeline-content">
                 <p>
                     The cryptocurrency market continued to evolve, with new projects,
@@ -144,8 +156,9 @@
                     address legal and security concerns related to cryptocurrencies.
                 </p>
             </div>
-        </li>
-    </ul>
+        </div>
+    </div>
+
 
     <div class="quiz-section">
         <h2>Quiz <i class="fal fa-question-circle"></i></h2>
