--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <i class="fab fa-connectdevelop"></i>
                 </div>
             </div>
-            Integration with multiple online resources
+            <p>Integration with multiple online resources</p>
         </div>
 
         <div class="feature">
@@ -61,7 +61,7 @@
                     <i class="fas fa-code-branch"></i>
                 </div>
             </div>
-            Predictive analytics for personalized recommendations
+            <p>Predictive analytics for personalized recommendations</p>
         </div>
 
         <div class="feature">
@@ -70,7 +70,7 @@
                     <i class="fas fa-database"></i>
                 </div>
             </div>
-            Continuous database updates based on user interactions
+            <p>Continuous database updates based on user interactions</p>
         </div>
 
         <div class="feature">
@@ -79,7 +79,7 @@
                     <i class="fas fa-mobile-alt"></i>
                 </div>
             </div>
-            Development of a mobile app focused on cryptocurrency history
+            <p>Development of a mobile app focused on cryptocurrency history</p>
         </div>
     </div>
 
@@ -92,7 +92,7 @@
                     <i class="fas fa-language"></i>
                 </div>
             </div>
-            Natural Language Processing (NLP) for content analysis
+            <p>Natural Language Processing (NLP) for content analysis</P>
         </div>
 
         <div class="feature">
@@ -101,7 +101,7 @@
                     <i class="fas fa-vr-cardboard"></i>
                 </div>
             </div>
-            Augmented Reality (AR) for immersive historical experiences
+            <p>Augmented Reality (AR) for immersive historical experiences</p>
         </div>
 
         <div class="feature">
@@ -110,7 +110,7 @@
                     <i class="fas fa-gamepad"></i>
                 </div>
             </div>
-            Gamification elements for engaging learning experiences
+            <p>Gamification elements for engaging learning experiences</p>
         </div>
 
         <div class="feature">
@@ -119,7 +119,7 @@
                     <i class="fas fa-users"></i>
                 </div>
             </div>
-            Social community and collaboration features
+            <p>Social community and collaboration features</p>
         </div>
     </div>
 
