--- a/signup.html
+++ b/signup.html
@@ -47,7 +47,7 @@
                 <label for="phone">Phone:</label>
                 <input type="tel" id="phone" name="phone" required>
 
-                <input type="submit" value="Sign Up" id="signup-btn">
+                <input type="button" value="Sign Up" id="signup-btn">
             </form>
         </div>
     </section>
